tuned for hourly scrape of consecutive months to backfill db

--- a/.github/workflows/monthly_pmc_fetch.yml
+++ b/.github/workflows/monthly_pmc_fetch.yml
@@ -2,8 +2,8 @@ name: Fetch relevant article figures monthly
 
 on:
   workflow_dispatch:
-  #schedule:
-  #- cron: "0 0 1 * *"
+  schedule:
+  - cron: "15 * * * *"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
