--- a/query_config.yml
+++ b/query_config.yml
@@ -1,3 +1,4 @@
 terms: (((((((((((signaling+pathway)+OR+signalling+pathway)+OR+regulatory+pathway)+OR+disease+pathway)+OR+drug+pathway)+OR+metabolic+pathway)+OR+biosynthetic+pathway)+OR+synthesis+pathway)+OR+cancer+pathway)+OR+response+pathway)+OR+cycle+pathway)
-last_run: 2023/03/23
+last_run: 2021/01/01
 date_range: ~
+exclude_pmcids: prior_pmcid_list.tsv
