--- a/.github/workflows/monthly_pmc_fetch.yml
+++ b/.github/workflows/monthly_pmc_fetch.yml
@@ -3,7 +3,7 @@ name: Fetch relevant article figures monthly
 on:
   workflow_dispatch:
   schedule:
-  - cron: "21 * * * *"
+  - cron: "*/10 * * * *"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
