--- a/.github/workflows/test_selenium.yml
+++ b/.github/workflows/test_selenium.yml
@@ -8,7 +8,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
     - uses: actions/checkout@v2
+    
+    - name: Install Requirements
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
     - name: Start Selenium Standalone Firefox
       uses: selenium/actions/start-standalone-firefox@v1
