--- a/.github/workflows/test_selenium.yml
+++ b/.github/workflows/test_selenium.yml
@@ -6,22 +6,17 @@ on:
 jobs:
   scrape:
     runs-on: ubuntu-latest
+    services:
+      selenium:
+        image: selenium/standalone-chrome:latest
+        ports: 
+          - 4445:4444
+        options: --shm-size="2g"
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    
-    - name: Install Requirements
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Start Selenium Standalone Firefox
-      uses: selenium/actions/start-standalone-firefox@v1
-
+      
     - name: Install R
       uses: r-lib/actions/setup-r@v1
       with:
@@ -34,4 +29,4 @@ jobs:
       run: Rscript scripts/test_selenium.R
       env:
         SELENIUM_BROWSER: firefox
-        SELENIUM_REMOTE_URL: "http://localhost:4444/wd/hub"
+        SELENIUM_REMOTE_URL: "http://selenium:4445/wd/hub"
