--- a/.github/workflows/test_selenium.yml
+++ b/.github/workflows/test_selenium.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       selenium:
-        image: selenium/standalone-chrome:latest
+        image: selenium/standalone-firefox:latest
         ports: 
           - 4445:4444
         options: --shm-size="2g"
@@ -18,12 +18,13 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Install R
-      uses: r-lib/actions/setup-r@v1
-      with:
-        r-version: '4.1.0'
+      uses: r-lib/actions/setup-r@v2
 
-    - name: Install RSelenium
-      run: Rscript -e 'install.packages("RSelenium", repos = "http://cran.rstudio.com/")'
+    - name: Install Packages
+      run: |
+        sudo apt-get update
+        sudo apt-get install libcurl4-openssl-dev
+        Rscript -e 'install.packages("RSelenium", repos = "http://cran.rstudio.com/")'
 
     - name: Run R Script to Scrape HTML Pages
       run: Rscript scripts/test_selenium.R
