--- a/.github/workflows/monthly_figure_fetch.yml
+++ b/.github/workflows/monthly_figure_fetch.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v3
       with:
           fetch-depth: 1
-          ref: main
+          ref: ${{ github.head_ref }}
       
     - name: Setup R
       uses: r-lib/actions/setup-r@v2
