--- a/.github/workflows/monthly_reset.yml
+++ b/.github/workflows/monthly_reset.yml
@@ -13,11 +13,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Reset last_run
-      uses: docker://stedolan/jq
-      with:
-        args: |
-          jq --arg last_run "$(date -v-12M '+%Y/%m/%d')" \
+    - name: Update last_run in query_config.yml
+      run: |
+        # Install jq
+        sudo apt-get update && sudo apt-get install -y jq
+        # Update last_run in query_config.yml
+        jq --arg last_run "$(date -v-12M '+%Y/%m/%d')" \
             '.last_run = $last_run' \
             query_config.yml > query_config.yml.new && \
           mv query_config.yml.new query_config.yml
