--- a/.github/workflows/monthly_reset.yml
+++ b/.github/workflows/monthly_reset.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+      
+    - name: Check Git repository contents
+      run: git ls-files
 
     - name: Reset last_run in query_config.yml
       run: |
