--- a/.github/workflows/monthly_reset.yml
+++ b/.github/workflows/monthly_reset.yml
@@ -21,7 +21,8 @@ jobs:
         # Install jq
         #sudo apt-get update && sudo apt-get install -y jq
         # Update last_run in query_config.yml
-        jq --arg last_run "3000/00/00" \
+        lr="3000/00/00"
+        jq --arg last_run "$lr" \
           '.last_run = $last_run' \
           query_config.yml > query_config.yml.new && \
           mv query_config.yml.new query_config.yml
