--- a/.github/workflows/monthly_reset.yml
+++ b/.github/workflows/monthly_reset.yml
@@ -21,7 +21,7 @@ jobs:
         # Install jq
         #sudo apt-get update && sudo apt-get install -y jq
         # Update last_run in query_config.yml
-        jq --arg last_run 3000 '.last_run = $last_run' query_config.yml > query_config.yml.new && mv query_config.yml.new query_config.yml
+        jq --arg last_run "$(date -d "1 year ago" +%Y/%m/%d)" '.last_run = $last_run' query_config.yml > query_config.yml.new && mv query_config.yml.new query_config.yml
 
   
     - name: Commit updated config file
