--- a/.github/workflows/monthly_reset.yml
+++ b/.github/workflows/monthly_reset.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Reset last_run in query_config.yml
       run: |
         DATE_12_MONTHS_AGO=$(date -d "12 months ago" +%Y/%m/%d)
-        sed -i "s/last_run:.*/last_run: $DATE_12_MONTHS_AGO/" query_config.yml
+        sed -i "s|last_run:.*|last_run: $DATE_12_MONTHS_AGO|" query_config.yml
 
   
     - name: Commit updated config file
