--- a/.github/workflows/daily_figure_fetch.yml
+++ b/.github/workflows/daily_figure_fetch.yml
@@ -3,7 +3,7 @@ name: Fetch pathway figures and metadata
 on:
   workflow_dispatch:
   schedule:
-  - cron: "0 1 * * *" #Runs at 01:00, everyday. 
+  - cron: "30 */6 * * *" #Runs every 6 hours at 30 past the hour, everyday. 
  
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
