--- a/.github/workflows/daily_figure_fetch.yml
+++ b/.github/workflows/daily_figure_fetch.yml
@@ -35,11 +35,16 @@ jobs:
     - name: Run R Script to Fetch Figures
       run: Rscript scripts/fetch_figures.R || true #commit files even if R crashes
       
-    - name: Pull and rebase any remote changes during this run
-      run: git pull --rebase
+    - name: Commit, pull with rebase (any remote changes during this run), and then push
+      run: |
+        git config --global user.name 'GitHub Action'
+        git config --global user.email 'action@github.com'
+        git add .
+        if git diff --exit-code --staged; then
+          echo "No changes"
+        else
+          git commit -m 'new figures from pmc; updated config and log'
+          git pull --rebase
+          git push --force-with-lease
+        fi
   
-    - name: Commit and push new/updated content
-      uses: stefanzweifel/git-auto-commit-action@v4  
-      with:
-        push_options: '--force-with-lease'
-        commit_message: new figures from pmc; updated config and log
