--- a/.github/workflows/daily_figure_fetch.yml
+++ b/.github/workflows/daily_figure_fetch.yml
@@ -21,7 +21,7 @@ jobs:
         name: Date check
         run: |
           status="skip"
-          last_run_date=$(yq r query_config.yml last_run | cut -c1-10)
+          last_run_date=$(sed -n 's/^last_run:[[:space:]]*\([[:digit:]]\{4\}\/[[:digit:]]\{2\}\/[[:digit:]]\{2\}\).*$/\1/p' query_config.yml)
           today_date="$(date +'%Y/%m/%d')"
           if [[ "$last_run_date" < "$today_date" ]]; then
             status="proceed"
@@ -30,7 +30,6 @@ jobs:
           fi
           echo "status=$status" >> $GITHUB_OUTPUT
   scrape:
-    name: Scrape
     needs: check
     if: needs.check.outputs.status == 'proceed'
     runs-on: ubuntu-latest
