--- a/.github/ISSUE_TEMPLATE/fetch_this_figure_issue.yml
+++ b/.github/ISSUE_TEMPLATE/fetch_this_figure_issue.yml
@@ -1,4 +1,4 @@
-name: Fetch This Figure
+name: Fetch this figure
 description: Request a specific figure to be included in PFOCR
 title: "[Fetch] Please include this pathway figure"
 labels: ["fetch"]
